# adventofcode

./: .gitignore  TODO.md  handler.py  pyproject.toml  requirements-dev.txt
adventofcode2021/: adventofcode_env.txt
adventofcode2021/inputs/: input_day1_1.txt  test_day16_1.txt
adventofcode2021/outputs/: day13.out
adventofcode2021/scripts/: create_files.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  functions.py  temp.txt  test.py  yt_day15.py
adventofcode2022/: .gitignore  test.py
adventofcode2022/outputs/: output_10.txt
adventofcode2022/scripts/: cleaned.txt  create_files.py  day1.py  day10.py  day11.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day7_rate.py  day7_rate_bis$.py  day8.py  day9.py
adventofcode2023/scripts/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py
adventofcode2025/: README.md
adventofcode2025/inputs/: test_day1.txt
adventofcode2025/scripts/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  streamlit_day4.py
commons/: Graph.py  Grid.py  UndirectedGraph.py  advent_of_code_client.py  create_files.py  template_script.py  utils.py
tests/: __init__.py
tests/commons/: __init__.py  test_Graph.py  test_grid.py
