[project]
name = "adventofcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "requests>=2.32.5",
]

[dependency-groups]
fancy = [
    "streamlit>=1.52.0",
]
test = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]
